# http-server

web_server/: CMakeLists.txt
web_server/http_server/: CMakeLists.txt
web_server/http_server/src/: index.html  simplest_web_server.cpp
web_server/http_server/src/httpd_micro/: index.html  result.html  takur.html
web_server/http_server/src/httpd_micro/html/: temp_result.html  temp_takur.html
web_server/http_server/src/httpd_micro/src/: microhttpd.c  microhttpd_old.c
web_server/http_server/src/httpd_mongoose/: simplest_web_server.cpp
